fix divider and align

--- a/src/common/index.css
+++ b/src/common/index.css
@@ -16,5 +16,6 @@
 
 @media only screen and (max-width: 428px) {
   .divider {
+    left: unset;
   }
 }
