--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -174,6 +174,10 @@
     text-align: center;
     line-height: 4.7rem;
   }
+  .about-us__text {
+    justify-content: center;
+    position: relative;
+  }
 
   .about-banner {
     display: flex;
